Updated home page gallery

--- a/furniture.html
+++ b/furniture.html
@@ -67,7 +67,7 @@
     <!-- GALLERY -->
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-16">
         <div class="content">
-            <a href="">
+            <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
                     class="content-image rounded-lg"
@@ -77,10 +77,10 @@
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Armonia</h3>
                 </div>
-            </a>
+            <!-- </a> -->
         </div>
         <div class="content">
-            <a href="">
+            <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
                     class="content-image rounded-lg"
@@ -90,10 +90,10 @@
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Ayala Bench</h3>
                 </div>
-            </a>
+            <!-- </a> -->
         </div>
         <div class="content">
-            <a href="">
+            <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
                     class="content-image rounded-lg"
@@ -103,10 +103,10 @@
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Vogue Italia</h3>
                 </div>
-            </a>
+            <!-- </a> -->
         </div>
         <div class="content">
-            <a href="">
+            <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
                     class="content-image rounded-lg"
@@ -116,10 +116,10 @@
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Salakot</h3>
                 </div>
-            </a>
+            <!-- </a> -->
         </div>
         <div class="content">
-            <a href="">
+            <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
                     class="content-image rounded-lg"
@@ -127,12 +127,12 @@
                     alt="image"
                 >
                 <div class="content-details fadeIn-top">
-                <h3 class="content-title">Dark 2</h3>
+                <h3 class="content-title">Ligaya</h3>
                 </div>
-            </a>
+            <!-- </a> -->
         </div>
         <div class="content">
-            <a href="">
+            <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
                     class="content-image rounded-lg"
@@ -142,10 +142,10 @@
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Willy the Whale</h3>
                 </div>
-            </a>
+            <!-- </a> -->
         </div>
         <div class="content">
-            <a href="">
+            <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
                 class="content-image rounded-lg"
@@ -153,12 +153,12 @@
                 alt="image"
                 >
                 <div class="content-details fadeIn-top">
-                    <h3 class="content-title">Chair</h3>
+                    <h3 class="content-title">Emery</h3>
                 </div>
-            </a>
+            <!-- </a> -->
         </div>
         <div class="content">
-            <a href="">
+            <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
                     class="content-image rounded-lg"
@@ -166,12 +166,12 @@
                     alt="image"
                 >
                 <div class="content-details fadeIn-top">
-                <h3 class="content-title">Dark 4</h3>
+                <h3 class="content-title">Haya-Haya</h3>
                 </div>
-            </a>
+            <!-- </a> -->
         </div>
         <div class="content">
-            <a href="">
+            <!-- <a href=""> -->
                 <div class="content-overlay"></div>
                 <img
                     class="content-image rounded-lg"
@@ -179,9 +179,9 @@
                     alt="image"
                 >
                 <div class="content-details fadeIn-top">
-                <h3 class="content-title">Dark 5</h3>
+                <h3 class="content-title">Dawata</h3>
                 </div>
-            </a>
+            <!-- </a> -->
         </div>
     </div>
 
