--- a/resume.html
+++ b/resume.html
@@ -91,7 +91,7 @@
         </div>
       </div>
       <div class="flex flex-col items-center lg:items-start">
-        <a href="https://drive.google.com/file/d/18dKZqQ2YVJiX_VJzWcw3T6ImxduPO0nV/view" target="_blank" class="pb-2">
+        <a href="https://drive.google.com/file/d/1MsrKzGpLZxQS3ZtPOi2n9YuUuUMmN01P/view?fbclid=IwAR2JpwG0VvWnfjEGtdN0HS7gj_1LKT9RcSHwEfNXYJehhLem4xoLNZN1Kc4" target="_blank" class="pb-2">
           <button class="btn normal-case btn-neutral w-72">
             download my resume
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
@@ -332,7 +332,7 @@
       <div class="grid grid-cols-1 gap-2 pt-10">
         <p class="text-xl xl:text-2xl font-bold text-[#678309]">OR DOWNLOAD MY RESUME</p>
         <p class="text-base">Download my resume in PDF format.</p>
-        <a href="https://drive.google.com/file/d/18dKZqQ2YVJiX_VJzWcw3T6ImxduPO0nV/view" target="_blank">
+        <a href="https://drive.google.com/file/d/1MsrKzGpLZxQS3ZtPOi2n9YuUuUMmN01P/view?fbclid=IwAR2JpwG0VvWnfjEGtdN0HS7gj_1LKT9RcSHwEfNXYJehhLem4xoLNZN1Kc4" target="_blank">
           <button class="btn normal-case btn-neutral w-72">
             download my resume
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
