--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
             </a>
           </div>
           <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
-            <div class="content h-full">
+            <div class="content h-full hidden lg:block">
               <a href="web">
                 <div class="content-overlay"></div>
                 <img
                   class="content-image rounded-lg h-full"
-                  src="images/funiture-cover.png"
+                  src="images/web-cover.png"
                   alt="image"
                 >
                 <div class="content-details fadeIn-top">
@@ -97,12 +97,38 @@
                 </div>
               </a>
             </div>
-            <div class="content h-full">
+            <div class="content block lg:hidden">
+              <a href="3d">
+                <div class="content-overlay"></div>
+                <img
+                  class="content-image rounded-lg"
+                  src="images/web-cover-mobile.png"
+                  alt="image"
+                >
+                <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Web Design</h3>
+                </div>
+              </a>
+            </div>
+            <div class="content h-full hidden lg:block">
               <a href="furniture">
                 <div class="content-overlay"></div>
                 <img
                   class="content-image rounded-lg h-full"
-                  src="images/funiture-cover.png"
+                  src="images/furniture-cover.png"
+                  alt="image"
+                >
+                <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Furniture Design</h3>
+                </div>
+              </a>
+            </div>
+            <div class="content block lg:hidden">
+              <a href="3d">
+                <div class="content-overlay"></div>
+                <img
+                  class="content-image rounded-lg"
+                  src="images/furniture-cover-mobile.png"
                   alt="image"
                 >
                 <div class="content-details fadeIn-top">
@@ -131,7 +157,7 @@
               <div class="content-overlay"></div>
               <img
                 class="content-image rounded-lg"
-                src="images/3d-projects-cover-small.png"
+                src="images/3d-projects-cover-mobile.png"
                 alt="image"
               >
               <div class="content-details fadeIn-top">
@@ -148,8 +174,12 @@
       <div class="flex flex-col">
         <p class="text-xl xl:text-2xl font-bold text-[#678309] pb-8">MY DESIGN PHILOSOPHY</p>
         <p class="text-base">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Design should always serve a purpose and provide a solution to a problem.
+          I believe that simplicity is the ultimate form of sophistication.
+          I strive to create designs that are fun and clean yet.
+          I focus on aligning design choices with the goals and needs of my clients.
+          I believe that well-crafted visuals and thoughtful use of color, typography,
+          and imagery can evoke the desired emotional responses from users.
         </p>
       </div>
       <!-- LEARN MORE ABOUT ME & RESUME -->
