Fix incorrect dates

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               </a>
             </div>
             <div class="content block lg:hidden">
-              <a href="3d">
+              <a href="web">
                 <div class="content-overlay"></div>
                 <img
                   class="content-image rounded-lg"
@@ -124,7 +124,7 @@
               </a>
             </div>
             <div class="content block lg:hidden">
-              <a href="3d">
+              <a href="furniture">
                 <div class="content-overlay"></div>
                 <img
                   class="content-image rounded-lg"
