--- a/web.html
+++ b/web.html
@@ -59,7 +59,7 @@
   <div class="main">
     <!-- HEADER -->
     <div class="flex flex-col pt-40 pb-16">
-        <p class="text-[#678309] font-bold text-xl lg:text-2xl pb-2">2018-2021</p>
+        <p class="text-[#678309] font-bold text-xl lg:text-2xl pb-2">2022</p>
         <p class="font-bold text-5xl lg:text-6xl pb-4">Website Design</p>
         <p class="text-lg">Selected works from my design projects during my position as an Associate Art Director.</p>
     </div>
