Removed blog from navbar

--- a/web.html
+++ b/web.html
@@ -31,7 +31,7 @@
             <li><a href="3d" class="hover:text-[#A697AD]">3D</a></li>
             <li><a href="web" class="hover:text-[#A697AD]">WEB</a></li>
             <li><a href="furniture" class="hover:text-[#A697AD]">FURNITURE</a></li>
-            <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li>
+            <!-- <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li> -->
           </ul>
         </div>
         <a href=".">
@@ -45,13 +45,13 @@
       </div>
       <div class="navbar-end hidden xl:flex">
         <ul class="menu menu-horizontal px-1 font-bold text-base">
-          <li><a href="about" class="hover:text-[#A697AD] hover:bg-[#E6E4D4]">ABOUT</a></li>
-          <li><a href="resume" class="hover:text-[#A697AD] hover:bg-[#E6E4D4]">RESUME</a></li>
-          <li><a href="graphic" class="hover:text-[#A697AD] hover:bg-[#E6E4D4]">GRAPHIC</a></li>
-          <li><a href="3d" class="hover:text-[#A697AD] hover:bg-[#E6E4D4]">3D</a></li>
-          <li><a href="web" class="hover:text-[#A697AD] hover:bg-[#E6E4D4]">WEB</a></li>
-          <li><a href="furniture" class="hover:text-[#A697AD] hover:bg-[#E6E4D4]">FURNITURE</a></li>
-          <li><a href="blog" class="hover:text-[#A697AD] hover:bg-[#E6E4D4]">BLOG</a></li>
+          <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
+          <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
+          <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC</a></li>
+          <li><a href="3d" class="hover:text-[#A697AD]">3D</a></li>
+          <li><a href="web" class="hover:text-[#A697AD]">WEB</a></li>
+          <li><a href="furniture" class="hover:text-[#A697AD]">FURNITURE</a></li>
+          <!-- <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li> -->
         </ul>
       </div>
     </div>
@@ -65,59 +65,50 @@
     </div>
 
     <!-- GALLERY -->
-    <div class="grid grid-cols-1 lg:grid-cols-2 gap-16">
-        <div class="content">
-            <a href="">
-                <div class="content-overlay"></div>
-                <img
-                    class="content-image rounded-lg"
-                    src="https://images.spr.so/cdn-cgi/imagedelivery/j42No7y-dcokJuNgXeA0ig/ddb551c2-b406-4f29-aa81-218f57477d28/Artboard_1_copy_4/w=3840,quality=80"
-                    alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                <h3 class="content-title">Website 1</h3>
-                </div>
-            </a>
+    <div class="grid grid-cols-1 gap-16">
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-16">
+          <div class="content">
+              <!-- <a href=""> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1icF_e9m0tTtx5jVp13KoRD9JleSZvkUu"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Website 1</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+          <div class="content">
+              <!-- <a href=""> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1JVOulInikV7o3rwJvqXm1mQah6wGYoPl"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Website 2</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+      </div>
+      <div class="grid grid-cols-1 lg:grid-cols-4 gap-16">
+        <div class="content lg:col-start-2 lg:col-span-2">
+          <!-- <a href=""> -->
+              <div class="content-overlay"></div>
+              <img
+                  class="content-image rounded-lg"
+                  src="https://drive.google.com/uc?export=view&id=176lrhIftyAgFYgjolT58kQLhMlO_J1zp"
+                  alt="image"
+              >
+              <div class="content-details fadeIn-top">
+              <h3 class="content-title">Mission Machining</h3>
+              </div>
+          <!-- </a> -->
         </div>
-        <div class="content">
-            <a href="">
-                <div class="content-overlay"></div>
-                <img
-                    class="content-image rounded-lg"
-                    src="https://www.notion.so/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F8fec686a-e95f-40e2-bd6d-cc963bd01d22%2FArtboard_1_copy.png?id=7f4d9144-9a88-490c-8325-ca01f7415421&amp;table=block"
-                    alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                <h3 class="content-title">Website 2</h3>
-                </div>
-            </a>
-        </div>
-        <div class="content">
-            <a href="">
-                <div class="content-overlay"></div>
-                <img
-                    class="content-image rounded-lg"
-                    src="https://www.notion.so/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F423d0c49-cace-413a-a56b-5fde362a1bf9%2FArtboard_1_copy_3.png?id=7212fa82-7e39-444e-b69d-27b5bc82aa6a&amp;table=block"
-                    alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                <h3 class="content-title">Website 3</h3>
-                </div>
-            </a>
-        </div>
-        <div class="content">
-            <a href="">
-                <div class="content-overlay"></div>
-                <img
-                    class="content-image rounded-lg"
-                    src="https://www.notion.so/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F14695293-9555-4f51-b7f3-a8db9021a409%2FArtboard_1_copy_2.png?id=4febf7d5-8abd-49f5-9187-f91cc4c5933a&amp;table=block"
-                    alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                <h3 class="content-title">Website 4</h3>
-                </div>
-            </a>
-        </div>
+      </div>
     </div>
 
     <div class="py-20"></div>
