Updated gallery of 3D and Graphic pages

--- a/graphic.html
+++ b/graphic.html
@@ -67,7 +67,7 @@
     <!-- GALLERY -->
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-16">
         <div class="content">
-            <a href="graphic/casa-selma">
+            <!-- <a href="graphic/casa-selma"> -->
                 <div class="content-overlay"></div>
                 <img
                     class="content-image rounded-lg"
@@ -77,10 +77,10 @@
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Casa Selma</h3>
                 </div>
-            </a>
+            <!-- </a> -->
         </div>
         <div class="content">
-            <a href="graphic/casa-selma">
+            <!-- <a href="graphic/casa-selma"> -->
                 <div class="content-overlay"></div>
                 <img
                     class="content-image rounded-lg"
@@ -90,10 +90,10 @@
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Casa Selma</h3>
                 </div>
-            </a>
+            <!-- </a> -->
         </div>
         <div class="content">
-            <a href="graphic/casa-selma">
+            <!-- <a href="graphic/casa-selma"> -->
                 <div class="content-overlay"></div>
                 <img
                     class="content-image rounded-lg"
@@ -103,46 +103,7 @@
                 <div class="content-details fadeIn-top">
                 <h3 class="content-title">Casa Selma</h3>
                 </div>
-            </a>
-        </div>
-        <div class="content">
-            <a href="graphic/casa-selma">
-                <div class="content-overlay"></div>
-                <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1zCjXNtDQLv0MyKRUvhJO80an3N5TLy1T"
-                    alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                <h3 class="content-title">Casa Selma</h3>
-                </div>
-            </a>
-        </div>
-        <div class="content">
-            <a href="graphic/casa-selma">
-                <div class="content-overlay"></div>
-                <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1zCjXNtDQLv0MyKRUvhJO80an3N5TLy1T"
-                    alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                <h3 class="content-title">Casa Selma</h3>
-                </div>
-            </a>
-        </div>
-        <div class="content">
-            <a href="graphic/casa-selma">
-                <div class="content-overlay"></div>
-                <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1zCjXNtDQLv0MyKRUvhJO80an3N5TLy1T"
-                    alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                <h3 class="content-title">Casa Selma</h3>
-                </div>
-            </a>
+            <!-- </a> -->
         </div>
     </div>
 
