--- a/3d.html
+++ b/3d.html
@@ -66,123 +66,201 @@
 
     <!-- GALLERY -->
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-16">
-        <div class="content">
-            <a href="">
-                <div class="content-overlay"></div>
-                <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1zCjXNtDQLv0MyKRUvhJO80an3N5TLy1T"
-                    alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                <h3 class="content-title">Casa Selma</h3>
-                </div>
-            </a>
-        </div>
-        <div class="content">
-            <a href="">
-                <div class="content-overlay"></div>
-                <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1hMKtMUj1RQPmd5qV8HMJ4lNt_sBsn_Gv"
-                    alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                <h3 class="content-title">Mood Table</h3>
-                </div>
-            </a>
-        </div>
-        <div class="content">
-            <a href="">
-                <div class="content-overlay"></div>
-                <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1Wd3GX0WKkEFRffDqvzcAbf908BqiNSKS"
-                    alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                <h3 class="content-title">Symply G</h3>
-                </div>
-            </a>
-        </div>
-        <div class="content">
-            <a href="">
-                <div class="content-overlay"></div>
-                <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1ONL-0xrTyUabzxS6V2rakiEWFxKzeL5Y"
-                    alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                <h3 class="content-title">Mood Cookies</h3>
-                </div>
-            </a>
-        </div>
-        <div class="content">
-          <a href="">
+      <div class="content">
+        <!-- <a href=""> -->
+            <div class="content-overlay"></div>
+            <img
+                class="content-image rounded-lg"
+                src="https://drive.google.com/uc?export=view&id=1ONL-0xrTyUabzxS6V2rakiEWFxKzeL5Y"
+                alt="image"
+            >
+            <div class="content-details fadeIn-top">
+            <h3 class="content-title">Mood Cookies</h3>
+            </div>
+        <!-- </a> -->
+      </div>
+      <div class="content">
+        <!-- <a href=""> -->
+            <div class="content-overlay"></div>
+            <img
+                class="content-image rounded-lg"
+                src="https://drive.google.com/uc?export=view&id=1hMKtMUj1RQPmd5qV8HMJ4lNt_sBsn_Gv"
+                alt="image"
+            >
+            <div class="content-details fadeIn-top">
+            <h3 class="content-title">Mood Table</h3>
+            </div>
+        <!-- </a> -->
+      </div>
+      <div class="content">
+        <!-- <a href=""> -->
+            <div class="content-overlay"></div>
+            <img
+                class="content-image rounded-lg"
+                src="https://drive.google.com/uc?export=view&id=1wb3F4k0h5rwRrbqAMqxBSuTYT52bp-zO"
+                alt="image"
+            >
+            <div class="content-details fadeIn-top">
+            <h3 class="content-title">Wick n Wanda</h3>
+            </div>
+        <!-- </a> -->
+      </div>
+      <div class="content">
+        <!-- <a href=""> -->
+            <div class="content-overlay"></div>
+            <img
+                class="content-image rounded-lg"
+                src="https://drive.google.com/uc?export=view&id=1Qkx2HnGXZDVzxmDf_gfR7phUIv82wzJM"
+                alt="image"
+            >
+            <div class="content-details fadeIn-top">
+            <h3 class="content-title">Lit Banner 1</h3>
+            </div>
+        <!-- </a> -->
+      </div>
+      <div class="content">
+          <!-- <a href=""> -->
               <div class="content-overlay"></div>
               <img
                   class="content-image rounded-lg"
-                  src="https://drive.google.com/uc?export=view&id=1Rz15083a7h6ICRH-Fr07sdkSGHbu8H6h"
+                  src="https://drive.google.com/uc?export=view&id=1OmCqonLdk59bBtK3zJLiEyYTA9mOVQ8G"
                   alt="image"
               >
               <div class="content-details fadeIn-top">
-              <h3 class="content-title">GRWM DISPENSER</h3>
+              <h3 class="content-title">Lit Summer</h3>
               </div>
-          </a>
-        </div>
-        <div class="content">
-            <a href="">
-                <div class="content-overlay"></div>
-                <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=17Jnm7-UbZfX9DDJgggEQSA4tZdsZvAIa"
-                    alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                <h3 class="content-title">Hey Honey</h3>
-                </div>
-            </a>
-        </div>
-        <div class="content">
-          <a href="">
+          <!-- </a> -->
+      </div>
+      <div class="content">
+        <!-- <a href=""> -->
+            <div class="content-overlay"></div>
+            <img
+                class="content-image rounded-lg"
+                src="https://drive.google.com/uc?export=view&id=1QShdAIbpwuXB97yLBEDKNly6cEhdEtVE"
+                alt="image"
+            >
+            <div class="content-details fadeIn-top">
+            <h3 class="content-title">Lit Banner 2</h3>
+            </div>
+        <!-- </a> -->
+      </div>
+      <div class="content">
+        <!-- <a href=""> -->
+            <div class="content-overlay"></div>
+            <img
+                class="content-image rounded-lg"
+                src="https://drive.google.com/uc?export=view&id=1mx8cqr4NWfDCpV_vF64KPnayveN6C4z5"
+                alt="image"
+            >
+            <div class="content-details fadeIn-top">
+            <h3 class="content-title">Lit Christmas</h3>
+            </div>
+        <!-- </a> -->
+      </div>
+      <div class="content">
+        <!-- <a href=""> -->
+            <div class="content-overlay"></div>
+            <img
+                class="content-image rounded-lg"
+                src="https://drive.google.com/uc?export=view&id=1ebMmybATDAPnvNwnAQ0ivwVwu14JiCok"
+                alt="image"
+            >
+            <div class="content-details fadeIn-top">
+            <h3 class="content-title">Lit Banner 3</h3>
+            </div>
+        <!-- </a> -->
+      </div>
+      <div class="content">
+        <!-- <a href=""> -->
+            <div class="content-overlay"></div>
+            <img
+                class="content-image rounded-lg"
+                src="https://drive.google.com/uc?export=view&id=1Wd3GX0WKkEFRffDqvzcAbf908BqiNSKS"
+                alt="image"
+            >
+            <div class="content-details fadeIn-top">
+            <h3 class="content-title">Symply G</h3>
+            </div>
+        <!-- </a> -->
+      </div>
+      <div class="content">
+        <!-- <a href=""> -->
+            <div class="content-overlay"></div>
+            <img
+                class="content-image rounded-lg"
+                src="https://drive.google.com/uc?export=view&id=1Rz15083a7h6ICRH-Fr07sdkSGHbu8H6h"
+                alt="image"
+            >
+            <div class="content-details fadeIn-top">
+            <h3 class="content-title">GRWM DISPENSER</h3>
+            </div>
+        <!-- </a> -->
+      </div>
+      <div class="content">
+        <!-- <a href=""> -->
+            <div class="content-overlay"></div>
+            <img
+                class="content-image rounded-lg"
+                src="https://drive.google.com/uc?export=view&id=1gMPpzxXHXI_F-Yj5CS_6Iv1b1EQqGgmn"
+                alt="image"
+            >
+            <div class="content-details fadeIn-top">
+            <h3 class="content-title">Goo Truck</h3>
+            </div>
+        <!-- </a> -->
+      </div>
+      <div class="content">
+          <!-- <a href=""> -->
               <div class="content-overlay"></div>
               <img
                   class="content-image rounded-lg"
-                  src="https://drive.google.com/uc?export=view&id=1oAb9gbxont6dGtdIRfjNCDfFjXegZ0_b"
+                  src="https://drive.google.com/uc?export=view&id=17Jnm7-UbZfX9DDJgggEQSA4tZdsZvAIa"
                   alt="image"
               >
               <div class="content-details fadeIn-top">
-              <h3 class="content-title">CKG</h3>
+              <h3 class="content-title">Hey Honey</h3>
               </div>
-          </a>
-        </div>
-        <div class="content">
-          <a href="">
-              <div class="content-overlay"></div>
-              <img
-                  class="content-image rounded-lg"
-                  src="https://drive.google.com/uc?export=view&id=1ZlSXSu2TSpQK8bYDy1upMWMV2viZRGRx"
-                  alt="image"
-              >
-              <div class="content-details fadeIn-top">
-              <h3 class="content-title">Catt & Co.</h3>
-              </div>
-          </a>
-        </div>
-        <div class="content">
-          <a href="">
-              <div class="content-overlay"></div>
-              <img
-                  class="content-image rounded-lg"
-                  src="https://drive.google.com/uc?export=view&id=1Qkx2HnGXZDVzxmDf_gfR7phUIv82wzJM"
-                  alt="image"
-              >
-              <div class="content-details fadeIn-top">
-              <h3 class="content-title">Lit Banner</h3>
-              </div>
-          </a>
-        </div>
+          <!-- </a> -->
+      </div>
+      <div class="content">
+        <!-- <a href=""> -->
+            <div class="content-overlay"></div>
+            <img
+                class="content-image rounded-lg"
+                src="https://drive.google.com/uc?export=view&id=1oAb9gbxont6dGtdIRfjNCDfFjXegZ0_b"
+                alt="image"
+            >
+            <div class="content-details fadeIn-top">
+            <h3 class="content-title">CKG</h3>
+            </div>
+        <!-- </a> -->
+      </div>
+      <div class="content">
+        <!-- <a href=""> -->
+            <div class="content-overlay"></div>
+            <img
+                class="content-image rounded-lg"
+                src="https://drive.google.com/uc?export=view&id=1ZlSXSu2TSpQK8bYDy1upMWMV2viZRGRx"
+                alt="image"
+            >
+            <div class="content-details fadeIn-top">
+            <h3 class="content-title">Catt & Co.</h3>
+            </div>
+        <!-- </a> -->
+      </div>
+      <div class="content">
+        <!-- <a href=""> -->
+            <div class="content-overlay"></div>
+            <img
+                class="content-image rounded-lg"
+                src="https://drive.google.com/uc?export=view&id=1zCjXNtDQLv0MyKRUvhJO80an3N5TLy1T"
+                alt="image"
+            >
+            <div class="content-details fadeIn-top">
+            <h3 class="content-title">Casa Selma</h3>
+            </div>
+        <!-- </a> -->
+      </div>
     </div>
 
     <div class="py-20"></div>
