Updated graphic page gallery

--- a/graphic.html
+++ b/graphic.html
@@ -61,49 +61,225 @@
     <div class="flex flex-col pt-40 pb-16">
         <p class="text-[#678309] font-bold text-xl lg:text-2xl pb-2">2018-2023</p>
         <p class="font-bold text-5xl lg:text-6xl pb-4">Graphic Design</p>
-        <p class="text-lg">Selected works from my freelance design projects and my position as an Associate Art Director.</p>
+        <p class="text-lg max-w-4xl">
+          Selected works from my freelance design projects and my position as an Associate Art Director.
+          Graphic design projects showcased here includes corporate branding, rebranding, package
+          design, and social media campaigns.
+        </p>
     </div>
 
     <!-- GALLERY -->
-    <div class="grid grid-cols-1 lg:grid-cols-3 gap-16">
-        <div class="content">
-            <!-- <a href="graphic/casa-selma"> -->
-                <div class="content-overlay"></div>
-                <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1zCjXNtDQLv0MyKRUvhJO80an3N5TLy1T"
-                    alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                <h3 class="content-title">Casa Selma</h3>
-                </div>
-            <!-- </a> -->
+    <div class="grid grid-cols-1 gap-20 lg:gap-32">
+        <div class="grid grid-cols-1 gap-20 md:grid-cols-2 lg:gap-64">
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=19hUOo04NYSLi7imUsFvoOC1DZuPfplt5"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Pinche Taqueria</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1Z1URvBTQnwVmi9zVn4FpPzqQsRJwf5uu"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Salo Salo Menu</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
         </div>
-        <div class="content">
-            <!-- <a href="graphic/casa-selma"> -->
-                <div class="content-overlay"></div>
-                <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1zCjXNtDQLv0MyKRUvhJO80an3N5TLy1T"
-                    alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                <h3 class="content-title">Casa Selma</h3>
-                </div>
-            <!-- </a> -->
+        <div class="grid grid-cols-1 gap-20 md:grid-cols-2 lg:gap-64">
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1YjsNhmiFVhqNmSVX79J97vehkLfQOCB9"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Sugar and Ice - Ice Cream</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1qg3-2nE1vTlEc70Eq9hg3pXnRPOVf0qQ"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Loco Drinks</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
         </div>
-        <div class="content">
-            <!-- <a href="graphic/casa-selma"> -->
-                <div class="content-overlay"></div>
-                <img
-                    class="content-image rounded-lg"
-                    src="https://drive.google.com/uc?export=view&id=1zCjXNtDQLv0MyKRUvhJO80an3N5TLy1T"
-                    alt="image"
-                >
-                <div class="content-details fadeIn-top">
-                <h3 class="content-title">Casa Selma</h3>
-                </div>
-            <!-- </a> -->
+        <div class="grid grid-cols-1 gap-20 md:grid-cols-2 lg:gap-64">
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1Xqa5qy36tDQXJC7-2SJqGHikn4uOnUB6"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">JMarketing Presentation</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1Okydt0obYB-CWg4FaA7VI5TuuRIomHAG"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">SOL Poster</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+        </div>
+        <div class="grid grid-cols-1 gap-20 md:grid-cols-2 lg:gap-64">
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1E7kemDiFndBiIpx0Ba5p19fznJo2sWGC"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Mons Commissioned Art</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1BnaeZfn9nKutQHRt_TMSJg6FLmTRqm6Y"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">FFAF Newsletter</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+        </div>
+        <div class="grid grid-cols-1 gap-20 md:grid-cols-2 lg:gap-64">
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1MB4Z3C0lNBbD07Aexq2l7878q0J9q0V1"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Toddler Playtown</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1y-s8iIph6kdlpiCwAb5QOlycEaJriPez"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Cuadtrito Box</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+        </div>
+        <div class="grid grid-cols-1 gap-20 md:grid-cols-2 lg:gap-64">
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1hT2x1xZyKTqK3uChN3RCV5yJJbcnEa91"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Lulus Chips</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=14Aewi6I3FtH6aVo8zNGncSdpcsbA8PvC"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">FFAF Linecard</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+        </div>
+        <div class="grid grid-cols-1 gap-20 md:grid-cols-2 lg:gap-64">
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1KdOkgwB7EJaA_NSskYKEceM0qpP_JcrJ"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">F45 Lasalle Free Ad</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1LAstsFq6vN51ogHA2MwhIoPItA57Ad_q"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">SyBridge Banner</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+        </div>
+        <div class="grid grid-cols-1 gap-20 md:grid-cols-2 lg:gap-64">
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1LRLJZ1k0g594mb6OoUDRjooOF3WPj-x6"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">Lachies Campaign</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
         </div>
     </div>
 
