--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
       <div class="flex flex-col">
         <p class="text-xl xl:text-2xl font-bold text-[#678309] pb-8">MY DESIGN PHILOSOPHY</p>
         <p class="text-base">
-          Design should always serve a purpose and provide a solution to a problem.
-          I believe that simplicity is the ultimate form of sophistication.
-          I strive to create designs that are fun and clean yet.
-          I focus on aligning design choices with the goals and needs of my clients.
-          I believe that well-crafted visuals and thoughtful use of color, typography,
-          and imagery can evoke the desired emotional responses from users.
+          The design process should be fun and spark a conversation.
+          It can get saturated overtime, which is why I like involving myself
+          in carrying out a variety of design disciplines. Design should always
+          serve a purpose and provide a solution to a problem. I strive to create
+          designs that are fun and clean yet still focused on aligning design
+          choices with the goals and needs of the users.
         </p>
       </div>
       <!-- LEARN MORE ABOUT ME & RESUME -->
