--- a/web.html
+++ b/web.html
@@ -76,7 +76,7 @@
                       alt="image"
                   >
                   <div class="content-details fadeIn-top">
-                  <h3 class="content-title">Website 1</h3>
+                  <h3 class="content-title">SyBridge</h3>
                   </div>
               <!-- </a> -->
           </div>
@@ -89,7 +89,7 @@
                       alt="image"
                   >
                   <div class="content-details fadeIn-top">
-                  <h3 class="content-title">Website 2</h3>
+                  <h3 class="content-title">Lachies Lobster Pan</h3>
                   </div>
               <!-- </a> -->
           </div>
