--- a/about.html
+++ b/about.html
@@ -58,15 +58,16 @@
 
   <div class="main">
     <!-- ABOUT ME -->
-    <div class="grid grid-cols-1 lg:grid-cols-3 gap-0 lg:gap-24 pt-40">
-      <div class="col-span-1">
+    <div class="grid grid-cols-1 gap-0 md:grid-cols-2 md:gap-14 lg:grid-cols-3 lg:gap-24 pt-40">
+      <div class="col-span-1 pt-14">
         <img
-          class="rounded-lg"
           src="https://drive.google.com/uc?export=view&id=1nqbsdnEl_GgnRNHjcyZ7kxJgLvGJNMUr"
           alt="image"
+          width="700"
+          height="700"
         >
       </div>
-      <div class="col-span-2 flex flex-col">
+      <div class="col-span-1 lg:col-span-2 flex flex-col">
         <p class="text-4xl lg:text-6xl font-bold text-[#678309] py-10 lg:py-20">about me</p>
         <p class="text-xl lg:text-2xl font-bold text-[#A697AD] pb-5">I am a lot of things.</p>
         <p class="text-base lg:text-lg max-w-3xl">
