Updated about me padding top

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 
   <div class="main">
     <!-- ABOUT ME -->
-    <div class="grid grid-cols-1 gap-0 md:grid-cols-2 md:gap-14 lg:grid-cols-3 lg:gap-24 pt-40">
+    <div class="grid grid-cols-1 gap-0 md:grid-cols-2 md:gap-14 lg:grid-cols-3 lg:gap-24 pt-20 md:pt-40">
       <div class="col-span-1 pt-16">
         <img
           src="https://drive.google.com/uc?export=view&id=1nqbsdnEl_GgnRNHjcyZ7kxJgLvGJNMUr"
